src/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Total_Price__c</fullName>
        <label>Item Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Order__c</fullName>
        <label>Market Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Market Order Items</relationshipLabel>
        <relationshipName>Market_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Market Order Items</relationshipLabel>
        <relationshipName>Market_Order_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Market Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrderItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>